[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CSE185_tSNE"
version = "2.4"
authors = [
  { name="Group 21", email="yiminggao618@gmail.com" },
]
description = "PCA done, tSNE half built"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AnonymousGym/CSE185_tSNE"
